fixed haeder being covered by catGallery elements

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,6 +30,7 @@ header {
     width: 100%;
     top: 0;
     transition:top 0.2s linear;
+    z-index: 10;
 }
 
 .sticky{
